--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       </form>
       <!-- Linea divisora -->
       <hr />
-      <section id="tasks-container">
+      <section class="p-1" id="tasks-container">
         <article
           class="alert alert-warning d-flex justify-content-center align-items-center my-2"
+          id="task-warning"
         >
           <p class="m-0">
             No hay tareas pendientes <i class="fa-solid fa-face-smile-wink"></i>
@@ -46,7 +47,7 @@
           <article
             class="alert alert-primary d-flex justify-content-between align-items-center my-2"
           >
-            <p class="m-0">Tarea #1</p>
+            <p class="m-0"></p>
             <h3 class="m-0">
               <i class="fas fa-solid fa-check text-success" role="button"></i>
               <i class="fas fa-solid fa-minus text-danger" role="button"></i>
