README #2, app functions added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <main class="container p-4">
       <h1 class="text-center">ToDo App</h1>
-      <form class="task-form d-grid" action="new-task">
+      <form class="d-grid" action="new-task" id="task-form">
         <input
           type="text"
           class="form-control my-2"
