--- a/index.html
+++ b/index.html
@@ -35,24 +35,28 @@
       <!-- Linea divisora -->
       <hr />
       <section class="p-1" id="tasks-container">
-        <article
-          class="alert alert-warning d-flex justify-content-center align-items-center my-2"
-          id="task-warning"
-        >
-          <p class="m-0">
-            No hay tareas pendientes <i class="fa-solid fa-face-smile-wink"></i>
-          </p>
-        </article>
+        <!-- Template de tareas -->
         <template id="task-template">
           <article
             class="alert alert-primary d-flex justify-content-between align-items-center my-2"
           >
-            <p class="m-0"></p>
+            <p id="task-text" class="m-0"></p>
             <h3 class="m-0">
-              <i class="fas fa-solid fa-check text-success" role="button"></i>
-              <i class="fas fa-solid fa-minus text-danger" role="button"></i>
-              <!-- <i class="fas fa-check-circle" role="button"></i>
-              <i class="fas fa-minus-circle" role="button"></i> -->
+              <i
+                class="fa-regular fa-pen-to-square"
+                role="button"
+                id="edit-task-btn"
+              ></i>
+              <i
+                class="fas fa-solid fa-check text-success"
+                role="button"
+                id="done-task-btn"
+              ></i>
+              <i
+                class="fas fa-solid fa-minus text-danger"
+                role="button"
+                id="rm-task-btn"
+              ></i>
             </h3>
           </article>
         </template>
